--- a/slides/continuous_l1.Rmd
+++ b/slides/continuous_l1.Rmd
@@ -90,7 +90,7 @@ d <- d %>%
   group_by(x_bin) %>% 
   mutate(y = cumsum(y))
 
-ggplot() +
+country_plot <- ggplot() +
   geom_label(data = d, 
              aes(x = x_mid,
                  y = y,
@@ -100,7 +100,14 @@ ggplot() +
   theme(panel.grid = element_blank()) +
   labs(x = "Average Life Expectancy", y = "Count")
 
+country_plot
 ```
+---
+Visualizing a Distribution
+Add density plot, histrogram, and country plot
+
+
+
 
 ---
 # Describing a Distribution
@@ -123,12 +130,7 @@ Today we are reviewing:
 * Measures of Skewness
 * Measures of Kurtosis
   
----
-# But first, summation notation
 
-Summation (or sigma) notation is used to provide a concise expression for the sum of observations.
-
-$$\sum_{i=i}^{n} x_{i}$$
 ---
 # Central Tendency
 ## Mean
@@ -136,12 +138,33 @@ $$\sum_{i=i}^{n} x_{i}$$
 * One of the most common forms of central tendency.
 * Represented by the Greek symbol $\mu$.
 
-> $$\bar{X} = \frac{1}{n}{\sum_{i=i}^{n} X_{i}}$$
  
 > $$mean(71, 73, 76, 78, 79) = \frac{71 + 73 + 76 + 78 + 79}{5} = 75.4$$
 
-The mean national life expectancy in 2015 is **71.64** years.
+
 ---
+# SUMMATION NOTATION AS A SHORTHAND FOR MEAN CALCULATIONS
+
+Summation (or sigma) notation is used to provide a concise expression for the sum of observations.
+
+$$\sum_{i=i}^{n} x_{i}$$
+> $$\bar{X} = \frac{1}{n}{\sum_{i=i}^{n} X_{i}}$$
+
+ADD DETAILS TO REFLECT WHO DATA HERE:
+> $$\bar{X} = \frac{1}{191}{\sum_{i=i}^{n} X_{i}}$$
+
+---
+# Central Tendency
+## Mean
+
+The mean represents the "balance point" of the distribution.
+
+```{R}
+country_plot +
+  geom_vline(xintercept = mean(who$life_expectancy))
+
+
+```
 # Central Tendency
 ## Median
 * Represents the **midpoint** of the distribution.
@@ -151,9 +174,6 @@ The mean national life expectancy in 2015 is **71.64** years.
 
 > $$median(71, 73, 76, 78, 79) = 76$$
 > $$median(71, 73, 76, 77, 78, 79) = 76.5$$
-```{r}
-median(who$life_expectancy)
-```
 
 The median national life expectancy in 2015 was **74** years.
 
@@ -366,11 +386,16 @@ var_plot +
 The standard deviation of life expectancy in 2015 was approximately 8.15 *years*.
 
 ---
-# Z-unit Distribution
+# Z-Transformation
 
+REWORD TO FOCUS ON TRANSFORMATIONS AND STANDARDIZING VALUES
 * A distribution can have any mean and any (positive) standard deviation.
 * A z-distribution is a useful distribution with a mean of 0 $(\mu)$ and a standard deviation $(\sigma)$ of 1.
 
+
+DISCUSS THE MOTIVATION FOR STANDARDIZING DISTRIUBTION
+
+DROP THE NORMAL PLOT
 ```{r echo=FALSE}
 ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
   stat_function(fun = dnorm) +
@@ -385,7 +410,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 ---
 # Transforming Distributions
-* Any distribution can be transformed into a z distribution using a linear function.
+* Any distribution can be standardized using a linear function.
 
 Each observation is transformed into a **z-score** using the following formula:
 $$z = \frac{X - \mu}{\sigma}$$
@@ -395,6 +420,11 @@ $$z = \frac{X - \mu}{\sigma}$$
 * An observation's z-score value is equal to its distance from the mean, in standard deviation units.
 
 ---
+SLIDE ON HOW TRANSOFMRATIONS DON'T CHANGE SHAPE OF DISTRIBUTION
+
+
+---
+
 # Transforming Distributions
 
 Here is a histogram of our life expectancy data.
@@ -471,7 +501,7 @@ gridExtra::grid.arrange(pos_skew, normal, neg_skew, nrow = 1)
 # Distributional Shape
 ## Kurtosis
 
-* Kurtosis describes how much the values concentrate around the center.
+* Kurtosis describes how much the values concentrate around the center (the "pointiness" of a distribution)
  + Leptokurtic distributions have more values around the center and have a "taller" peak.
  + Platykurtic distributions do not have a prominent peak and have a flatter top.
  
@@ -522,6 +552,18 @@ gridExtra::grid.arrange(platy, central, lepto, nrow = 1)
 
 ```
 ---
+
+Moments of a distribution
+add formulas
+1. 
+2. 
+3.
+4.
+
+We do not need to know how to calculate skew and kurtosis but we need to have a sense of how to interpret them.
+
+Key takeaway
+---
 # Evaluating Skewness and Kurtosis
 
 * Skewness and kurtosis can be evaluated visually and summarized quantitatively.
@@ -533,6 +575,13 @@ gridExtra::grid.arrange(platy, central, lepto, nrow = 1)
   + Platykurtic ----> Kurtosis < 0
   
 ---
+
+In this course we will focus visual analysis for severe skew or kurtosis. 
+
+Future courses will discuss how to correct for skew or kurtosis, as necessary. 
+
+---
+
 # Summarizing Data
 ## Applied Example
 
@@ -547,6 +596,12 @@ ggplot(who, aes(life_expectancy)) +
 
 * Is there severe skew?
 * Is there severe kurtosis?
+
+---
+# Other Vulnerabilities of Central Tendency Measures
+
+Touch on outliers
+
 
 ---
 # Summarizing Data
@@ -668,3 +723,9 @@ ggplot(x, aes(neg_skew)) +
   geom_density()
 
 ```
+---
+
+# Boxplots
+A way to visualize central tendency and variance
+
+# Stem and Leaf plot
