--- a/slides/continuous_l2.Rmd
+++ b/slides/continuous_l2.Rmd
@@ -36,32 +36,29 @@ who <- import(here::here("data", "life_expectancy.csv")) %>%
   rename(region = country) %>% 
   mutate(life_expectancy = round(life_expectancy, digits = 0))
 
+needs(car)
+leveneTest(life_expectancy ~ status, data = who)
+
 ```
 
 # Agenda
 * Sampling Distributions
 * Central Limit Theorem
 
+
+
 ---
-# Normal Distributions
+#Noraml Distributions
 
-Characterized by:
+The normal distribution is a frequently occurring phenomenon across the social and natural sciences.
 
-* Central Tendency
-  + Mean
-  + Median
-  + Mode
+Show examples
 
-* Variability
-  + Range
-  + Interquartile Range
-  + Variance
-  + Standard Deviation
+We can replicate this phenomenon using a mathematical function.
 
-* Shape
-  + Skew
-  + Kurtosis
+law of math, "not real" or truth. we can generate a function that resembles the natural phenomenon found in the real world. 
 
+"Model" this natural phenomenon. 
 ---
 # Normal Distributions
 
@@ -76,6 +73,7 @@ Variability:
 + 99% of observations are within 3 SDs
 
 Shape: 
++ Unimodal
 + Symmetrical
 + Skewness & Kurtosis = 0
 
@@ -119,7 +117,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ---
 
 # Normal Distributions
-
+### Highlighht area under the curve
 We can use our understanding of the normal distribution to calculate the probability of observing a value in a certain range. This is known as the **empirical rule**.
 
 ```{r}
@@ -160,7 +158,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 ```
 
 * A randomly selected observation has an approximately **95.5% chance of being within 2 SD** of the mean.
- + $ P(-2 < Z < 2) = 0.955 $
+ + $P(-2 < Z < 2) = 0.955$
 
 ---
 # What is normal?
@@ -200,7 +198,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 ---
 # Z-Test
-
+## ADD z-test code
 Suppose we wanted to know the probability of scoring at least 1.5 SD above the mean on a standardized test. 
 
 ```{r}
@@ -463,12 +461,17 @@ for (i in seq(1, 100, 10)) {
 ```
 
 ---
+# Population vs. Sample Notation
+
+
+---
 # Central Limit Theorem
+## MOVE EARLIER
 
 * Here is a histogram of the means of 1000 random samples from our WHO data.
 * The center of the distribution is our population mean.
 * The standard deviation is the standard error of the mean.
-{https://onlinestatbook.com/stat_sim/sampling_dist/}
+{https://onlinestatbook.com/stat_sim/sampling_dist/ }
 
 ```{r, parse = T, echo = F}
 
@@ -500,6 +503,8 @@ ggplot(samp_means, aes(means)) +
 ```
 
 ---
+SUMMARY SLIDE ON WHAT THE CENTRAL LIMIT THEOREM ALLOWS US TO DO
+---
 # T-Tests
 * One-Sample T-Test
 * T-Distributions
@@ -507,7 +512,7 @@ ggplot(samp_means, aes(means)) +
 * Hypothesis Testing
 
 ---
-# T-Distributions
+# Population Variance
 * In a z-test, the population standard deviation is assumed to be known.
 
 * In practice, we **rarely** know the true population standard deviation due to:
@@ -515,14 +520,15 @@ ggplot(samp_means, aes(means)) +
   + Population statistics can be in constant flux (e.g., average life expectancies can change moment to moment)
   + Can be unfeasible to measure entire population
 
-.pull-left[
-* **T-Distributions**:
-  + Assume that the population standard deviation $(\sigma)$ is unknown. 
-  + Resemble Z-distributions as degrees of freedom increase.
-  + The degrees of freedom for a t-test is always *n*-1, where *n* is your sample size.
-]
+---
+# T-Distributions
+* Assume that the population standard deviation $(\sigma)$ is unknown. 
+* Resemble Z-distributions as degrees of freedom increase.
+* The degrees of freedom for a t-test is always *n*-1, where *n* is your sample size.
 
-.pull-right[
+* comes from the central limit theorem
+DESCRIBE HOW IT EMERGES FROM CENTRAL LIMIT THEOREM
+  
 ```{r, echo=F, animation.hook="gifski", interval=0.4,}
 
 df_seq <- tibble(df = seq(1, 30, 3))
@@ -542,7 +548,7 @@ x <- ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 print(x)
 }
 ```
-]
+
 
 
 ```{r , echo=F, animation.hook="gifski", interval=0.4, eval = F}
@@ -574,7 +580,11 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 * The purpose of a one-sample t-test is to describe the probability of obtaining a particular sample mean through random sampling variability, assuming the population mean = K.
   + e.g. Is our observed sample mean to be expected, assuming it reflects a random sample of the population?
+  
+  
+FOR EXAMPLE, SUPPOSE WE WANT TO KNOW IF A SAMPLE OF COUNTRIES IS DIFFERENT FROM THE KNOWN POPULATION'S AVERAGE LIFE EXPECTANCY.
 
+---
 * Does **not** tests probability of obtaining the sample distribution or data itself, only the sample mean.
   
 * **Null Hypothesis** $(H_0)$: $\mu = K$, where $K$ is any constant.
@@ -718,20 +728,14 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 **Note:** One-tailed tests are rarely warranted and we will always be conducting two-tailed tests.
 
 > If the null hypothesis is true, the probability of obtaining a sample mean equal to or more extreme 66.87 is 0.24. What does this mean for the null hypothesis?
+
 ---
-# Alpha Thresholds and *p*-Values
-* Alpha $(\alpha)$ represents our Type 1 error rate:
-  + Type 1 Error - Rejecting the null hypothesis when it is actually true
-  + $\alpha = .05$ means we will mistakenly reject the null hypothesis 5% of the time.
-  
-* Alpha is also equal to the maximum p-value necessary to reject the null hypothesis.
-  + If $\alpha = .05$ and $p < .05$, we can reject the null hypothesis.
-
-* Alpha should be identified **prior to conducting a statistical test**.
-  + Most conventional $\alpha$ values are .05 and .01.
-
+ONE-TAILED VS. TWO-TAILED TESTS
+we are testing whether an extreme value would occur on either side of the mean value. If it is equally likely 
 ---
 # Alpha Thresholds and t-values
+
+## NEEDS ELABORATION
 * Critical t-values $t_{\alpha/2}(df)$ are the thresholds at which our alpha threshold is met.
   + Vary depending on $df$ and $\alpha$
   
@@ -849,69 +853,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 Assuming a population mean of 78.16 and sample size of 10, the proportion of random samples that would demonstrate a sample mean **equal to or more extreme than 66.87** is 0.24 $(t = -1.24, p = 0.24)$. Because our p-value does not meet our alpha threshold of .05, we **fail to reject the null hypothesis**.
 
----
-# Thinking about *p*-values
-
-Assume that we find that average national life expectancy is significantly greater in high-income countries compared to low-income countries. With an $\alpha$ of .05, the (hypothetical) statistical test returns *p* = .03, meaning we can reject the null hypothesis.
-
-Which of the following statements is correct, given *p* = .03:
-* **A.** There is a 3% probability that high-income countries do not have a higher average life expectancy (the null hypothesis).
-* **B.** There is a 3% probability that the results are due to random chance, rather than the effect of income level.
-* **C.** A statistically significant difference means higher income-levels yield higher life expectancies.
-* **D.** The observed data would only occur 3% of the time if the null hypothesis was true.
-* **E.** Previous research found that in 2005, income-level failed to produce a significant difference in average life expectancy (*p* = .17). Therefore, income-level is more influential on life expectancy in 2015 than in 2005.
-* **F.** Another research group finds a statistically significant difference between countries with socialized medicine compared to those without (*p* = .001). Their smaller *p* value means that socialized medicine is more effective at increasing life expectancy than income level.
-
----
-# Thinking about *p*-values
-
-* None of the previous interpretations were correct, yet these are commonly expressed in scientific literature!
-
-* In frequentist statistics, we are rejecting or failing to reject the null hypothesis, set by a particular alpha value. 
-
-* P-values are not a gradient and should only reference the alpha threshold and the null hypothesis.
-
----
-# Analogy
-### (Feel free to drop or edit this analogy)
-
-You are given a six-sided die and told it is normally weighted. 
-
-$H_0:$ The die is normally weighted.
-
-If the die is normally weighted, each number should come up with approximately equal frequency across 1000 rolls. Depending on the outcome and its probability under the null hypothesis, you can accept or reject the null hypothesis.
-
-An outcome can be more or less unlikely with a equally weighted die, but the die does not"approach unequal weighting" or is not a "marginally loaded die."
-
----
-
-```{r}
-d <- who %>% 
-      filter(str_length(region) <= 12) %>% 
-      sample_n(60)
-d_hist <- hist(d$life_expectancy, plot = FALSE)
-d$x_bin <- cut(d$life_expectancy, breaks = d_hist$breaks, label = FALSE)
-d$x_mid <- d_hist$mids[d$x_bin]
-d$y <- 1
-
-d %<>% group_by(x_bin) %>% mutate(y = cumsum(y))
-head(d)
-
-ggplot() +
-  geom_label(
-    data = d,
-    mapping = aes(
-      x = x_mid,
-      y = y,
-      label = region
-    ),
-    size = 2
-  ) +
-  theme_bw(base_size = 12) +
-  theme(panel.grid = element_blank()) +
-  labs(x = "Average Life Expectancy", y = "Count")
-```
-
+Thus, we can conclude that the mean life expectancy of this sample of countries is not different from the mean population average.
 
 ---
 # Independent Two-Sample t-test
@@ -921,10 +863,15 @@ ggplot() +
 * Enables a researchers to test for a significant difference between two groups.
  + e.g., Does the life expectancy of high-income countries significantly differ from low-income countries?
 
+
+## Elaborate on motivation for test
+
+
+---
 * Independent samples means a subject can only belong to one group. 
 
 $$ H_0: \mu_1 = \mu_2 $$
-$$ H_1: \mu_1 != \mu_2 $$
+$$ H_1: \mu_1 \neq \mu_2 $$
 ---
 # Independent Two-Sample t-test
 
@@ -933,10 +880,13 @@ If our null hypothesis is $H_0: \mu_1 = \mu_2$, then $\mu_1 - \mu_2$ should also
 To calculate our test statistic we use the following formula:
 
 $$ t = \frac{\bar{X}_1 - \bar{X}_2}{SE} $$
+
+Our standard error (SE) refers to the $\sigma$ for the sampling distribution of the **difference in means**. This is a multi-step process to calculate.
+
 Assuming there is no difference between our sample means (null hypothesis is true), our t will always equal zero. 
 
 $$ t = \frac{0}{SE} = 0 $$
-Our standard error refers to the $\sigma$ for the sampling distribution of the **difference in means**. This is more complicated to calculate.
+
 ---
 # Sampling a difference in means
 
@@ -958,6 +908,8 @@ $$\bar{x}_2 - \bar{y}_2$$
 ---
 # Sampling a difference in means
 
+ADD LEGEND OR OTHER WAY TO LABEL DISTRIUBTIONS BY THEIR GROUP
+
 Suppose we have two populations of students - students with infrequent school attendance and students who attend school regularly. On our standardized test, students with infrequent attendance have an average score of 95 $\mu_x = 95)$ and students with regular attendance have an average score of 104 $\mu_x = 104)$. Thus, our true difference in means is 9.
 ```{r}
 sim_2pop <- tibble(x = rnorm(1000, mean = 95, sd = 10),
@@ -972,7 +924,30 @@ sim_means <- tibble(samp = seq(1, 30, 1),
                     diff = x - y)
 ```
 
-Just like with our one-sample t-test, every time we sample each population, we obtain a new estimated difference between the two groups. The estimated difference in means forms its own normal distribution.
+Just like with our one-sample t-test, every time we sample each population, we obtain a new estimated difference between the two groups.
+
+```{r , echo=F, animation.hook="gifski"}
+
+for (i in seq(1:30)) {
+
+dist_plots <- ggplot(sim_2samp[[i]]) +
+  geom_density(aes(x = sim_2samp[[i]]$x), color = "red") +
+  geom_density(aes(x = sim_2samp[[i]]$y), color = "blue") +
+  geom_vline(xintercept = mean(sim_2samp[[i]]$x), color = "red") +
+  geom_vline(xintercept = mean(sim_2samp[[i]]$y), color = "blue") +
+  geom_segment(x = mean(sim_2samp[[i]]$x), xend = mean(sim_2samp[[i]]$y), y = 0.015, yend = 0.015, linetype = 2) +
+  geom_label(x = ((mean(sim_2samp[[i]]$x) + mean(sim_2samp[[i]]$y))/2), 
+             y = 0.01, 
+             label = paste(round(sim_means$diff[i]), 2)) +
+  theme_minimal()
+ print(dist_plots)
+ 
+}
+```
+
+---
+
+As we take repeated samples, the estimated difference in means forms its own normal distribution.
 
 .pull-left[
 ```{r , echo=F, animation.hook="gifski"}
@@ -1027,15 +1002,21 @@ print(mean_plots)
 ```
 ]
 ---
+ADD SLIDE THAT SHOWS CONVERGENCE TO NORMAL DISTRIUBTION
+
+
+---
 # Central Limit Theorem
 
 Given two populations such that the mean is $\mu_X$ and standard deviation is $\sigma$ for Population 1 and the mean is $\mu_Y$ and standard deviation is $\sigma$ for Population 2, the sampling distribution of the difference in sample means is a normal distribution with a mean equal to $\mu_X - \mu_Y$ and standard deviation equal to $\sqrt{\frac{\sigma^2}{n_1} + \frac{\sigma^2}{n_2}}$, where $n_1$ and $n_2$ are the sample sizes.
 
-Notice we have only one $\sigma$ for both groups? This is an assumption of **homogeneity of variance**, meaning they share the same population variance despite differences in their means.
+Notice we have only one $\sigma$ for both groups. This is an assumption of **homogeneity of variance**, meaning they share the same population variance despite differences in their means.
 
+If we do not have homogeneity of variance, then SOMETHING ABOUT WELCH'S T.
 ---
 # Estimating Variance
 
+CHANGE S TO SIGMA HAT SQUARED
 Since we rarely know the population standard deviation, we have to calculate a **pooled standard deviation** to estimate the populations standard deviation.
 
 $$\hat{\sigma} = \sqrt{\frac{(n_1-1)s_1 + (n_2-1)s_2 }{n_1+n_2-2}} $$
@@ -1043,18 +1024,24 @@ $$\hat{\sigma} = \sqrt{\frac{(n_1-1)s_1 + (n_2-1)s_2 }{n_1+n_2-2}} $$
 
 * Our degrees of freedom for an independent sample t-test is represented by $n_1+n_2-2$.
 
+UTILIZE OLD VARIANCE SLIDES
+
+WE WANT TO ENSURE THAT EACH UNIT IS EQUALLY WEIGHTED (THE SD OF ONE GROUP IS NOT OVER-REPRESENTED IF IT HAS A SMALLER N SIZE)
+
 ---
 # Calculating the Standard Error
 
-Our standard error of the difference in mean $(\sigma_D)$ is calculated from our pooled standard deviation $(\hat{\sigma}_D)$ and sample sizes.
+Our standard error of the difference in means $(\sigma_{diff})$ is calculated from our pooled sample standard deviation $(\hat{\sigma}_)$ and sample sizes.
 
-$$SE(\sigma_D) = \sqrt{\frac{\hat{\sigma}^2}{n_1} + \frac{\hat{\sigma}^2}{n_2}} $$
+$$SE(\sigma_{diff}) = \sqrt{\frac{\hat{\sigma}^2}{n_1} + \frac{\hat{\sigma}^2}{n_2}} $$
 
 Then we just have to insert our standard error into our formula to find our test statistic.
 
 $$ t = \frac{\bar{X}_1 - \bar{X}_2}{SE} = \frac{\bar{X}_1 - \bar{X}_2}{\sqrt{\frac{\hat{\sigma}^2}{n_1} + \frac{\hat{\sigma}^2}{n_2}}}$$
 ---
 # Independent Samples T-Test
+
+## cycle through slides with color coding to build final equation
 Null Hypothesis: Students with infrequent attendance have equal achievement scores to students with regular attendance.
 $$ H_0: \mu_1 = \mu_2 $$
 * Sample Sizes:
@@ -1081,8 +1068,9 @@ Pooled variance $(\hat{\sigma})$ = 9.57
 Sample Mean Difference $(\bar{X}_1 - \bar{X}_2)$ = $-8.44$
 
 $$  t = \frac{\bar{X}_1 - \bar{X}_2}{SE} = \frac{-8.44}{\sqrt{\frac{{9.57}^2}{12} + \frac{{9.57}^2}{76}}} = \frac{-8.44}{2.97} - -2.84$$
-If the null hypothesis is true, what is the probability of observing a t-statistic of -2.84, or a more extreme value (degrees of freedom = 86)?
+> If the null hypothesis is true, what is the probability of observing a t-statistic of -2.84, or a more extreme value (degrees of freedom = 86)?
 ---
+# Evaluating the Null Hypothesis
 
 The p-value for a two-tailed test with a t-value of -2.84 and degrees of freedom is .006. 
 ```{r}
@@ -1112,5 +1100,6 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 Assuming the null hypothesis is true, the probability of obtaining a difference in sample means of +/- 8.44 or greater is .006. Because this is highly unlikely (p = .006 < .05), we can **reject the null hypothesis**.
 
+ADD SUMMARY STATEMENT HERE
 ---
-
+# Confidence Intervals
